Fixed navbar on mobile displays

--- a/final/css/forum.scss
+++ b/final/css/forum.scss
@@ -69,7 +69,7 @@ div.forum-posts-nav {
   margin-bottom: 5px;
 }
 
-h4.list-group-item-heading.post-title{
+h4.list-group-item-heading.post-title, h3.panel-title.selected-post-title{
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
